--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<h1><a href="https://www.facebook.com/Colegio-Leonardo-Da-Vinci-108536310771516/"><img src="jj.jpg" align="left" width="100" height="100" /> </a><b>Primer Trimestre<p> Marzo</h1></center>
+<h1><a href="https://www.facebook.com/Colegio-Leonardo-Da-Vinci-108536310771516/"><img src="jj.jpg" align="right" width="100" height="100" /> </a><b>Primer Trimestre<p> Marzo</h1></center>
 <div class="explanation">
 
   <p>Ingrese los dos primeros nombre y el primer apellidoooooooo</p>
