--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <h1><a href="https://www.facebook.com/Colegio-Leonardo-Da-Vinci-108536310771516/"><img src="jj.jpg" align="right" width="100" height="100" /> </a><b>Primer Trimestre<p> Marzo</h1></center>
 <div class="explanation">
 
-  <p>Ingrese los dos primeros nombre y el primer apellidoooooooo</p>
+  <p>Ingrese los dos primeros nombre y el primer apellido</p>
   <p>La primera letra en los nombres y apellido, debe ser en mayuscula</p>
 </div>
 
