--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Brayan Steven Perez</td>
+      <td>Bryan Steven Perez</td>
       <td>Matematica</td>
       <td>10</td>
       <td>10</td>
@@ -194,7 +194,7 @@
       <td>10</td>
     </tr>
     <tr>
-      <td>Brayan Steven Perez</td>
+      <td>Bryan Steven Perez</td>
       <td>Ingles</td>
       <td>10</td>
       <td>10</td>
@@ -202,7 +202,7 @@
       <td>9</td>
     </tr>
     <tr>
-      <td>Brayan Steven Perez</td>
+      <td>Bryan Steven Perez</td>
       <td>lenguaje</td>
       <td>0</td>
       <td>0</td>
@@ -210,7 +210,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Brayan Steven Perez</td>
+      <td>Bryan Steven Perez</td>
       <td>Ciencias</td>
       <td>0</td>
       <td>0</td>
@@ -218,7 +218,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Brayan Steven Perez</td>
+      <td>Bryan Steven Perez</td>
       <td>Sociales</td>
       <td>0</td>
       <td>0</td>
@@ -226,7 +226,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Byron Alberto de Leon</td>
+      <td>Byron Alberto De Leon</td>
       <td>Matematica</td>
       <td>10</td>
       <td>10</td>
@@ -234,7 +234,7 @@
       <td>10</td>
     </tr>
     <tr>
-      <td>Byron Alberto de Leon</td>
+      <td>Byron Alberto De Leon</td>
       <td>Ingles</td>
       <td>0</td>
       <td>0</td>
@@ -242,7 +242,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Byron Alberto de Leon</td>
+      <td>Byron Alberto De Leon</td>
       <td>lenguaje</td>
       <td>0</td>
       <td>0</td>
@@ -250,7 +250,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Byron Alberto de Leon</td>
+      <td>Byron Alberto De Leon</td>
       <td>Ciencias</td>
       <td>0</td>
       <td>0</td>
@@ -258,7 +258,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Byron Alberto de Leon</td>
+      <td>Byron Alberto De Leon</td>
       <td>Sociales</td>
       <td>0</td>
       <td>0</td>
@@ -386,7 +386,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Elmer Gael Medrana</td>
+      <td>Elmer Gael Medrano</td>
       <td>Matematica</td>
       <td>0</td>
       <td>0</td>
@@ -394,7 +394,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Elmer Gael Medrana</td>
+      <td>Elmer Gael Medrano</td>
       <td>Ingles</td>
       <td>0</td>
       <td>0</td>
@@ -402,7 +402,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Elmer Gael Medrana</td>
+      <td>Elmer Gael Medrano</td>
       <td>lenguaje</td>
       <td>0</td>
       <td>0</td>
@@ -410,7 +410,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Elmer Gael Medrana</td>
+      <td>Elmer Gael Medrano</td>
       <td>Ciencias</td>
       <td>0</td>
       <td>0</td>
@@ -418,7 +418,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Elmer Gael Medrana</td>
+      <td>Elmer Gael Medrano</td>
       <td>Sociales</td>
       <td>0</td>
       <td>0</td>
@@ -466,7 +466,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Jefferson Stanley Megia</td>
+      <td>Jefferson Stanley Mejia</td>
       <td>Matematica</td>
       <td>10</td>
       <td>9</td>
@@ -474,7 +474,7 @@
       <td>10</td>
     </tr>
     <tr>
-      <td>Jefferson Stanley Megia</td>
+      <td>Jefferson Stanley Mejia</td>
       <td>Ingles</td>
       <td>0</td>
       <td>0</td>
@@ -482,7 +482,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Jefferson Stanley Megia</td>
+      <td>Jefferson Stanley Mejia</td>
       <td>lenguaje</td>
       <td>0</td>
       <td>0</td>
@@ -490,7 +490,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Jefferson Stanley Megia</td>
+      <td>Jefferson Stanley Mejia</td>
       <td>Ciencias</td>
       <td>0</td>
       <td>0</td>
@@ -498,7 +498,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Jefferson Stanley Megia</td>
+      <td>Jefferson Stanley Mejia</td>
       <td>Sociales</td>
       <td>0</td>
       <td>0</td>
@@ -746,7 +746,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Vanesa Raciel Flores</td>
+      <td>Vanessa Raziel Chavarria</td>
       <td>Matematica</td>
       <td>0</td>
       <td>0</td>
@@ -754,7 +754,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Vanesa Raciel Flores</td>
+      <td>Vanessa Raziel Chavarria</td>
       <td>Ingles</td>
       <td>0</td>
       <td>0</td>
@@ -762,7 +762,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Vanesa Raciel Flores</td>
+      <td>Vanessa Raziel Chavarria</td>
       <td>lenguaje</td>
       <td>0</td>
       <td>0</td>
@@ -770,7 +770,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Vanesa Raciel Flores</td>
+      <td>Vanessa Raziel Chavarria</td>
       <td>Ciencias</td>
       <td>0</td>
       <td>0</td>
@@ -778,7 +778,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Vanesa Raciel Flores</td>
+      <td>Vanessa Raziel Chavarria</td>
       <td>Sociales</td>
       <td>0</td>
       <td>0</td>
