Daniela Nahomi Guardado cambiado

--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Daniela Nahomy Guardado</td>
+      <td>Daniela Nahomi Guardado</td>
       <td>Matematica</td>
       <td>10</td>
       <td>10</td>
@@ -314,7 +314,7 @@
       <td>10</td>
     </tr>
     <tr>
-      <td>Daniela Nahomy Guardado</td>
+      <td>Daniela Nahomi Guardado</td>
       <td>Ingles</td>
       <td>0</td>
       <td>0</td>
@@ -322,7 +322,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Daniela Nahomy Guardado</td>
+      <td>Daniela Nahomi Guardado</td>
       <td>lenguaje</td>
       <td>0</td>
       <td>0</td>
@@ -330,7 +330,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Daniela Nahomy Guardado</td>
+      <td>Daniela Nahomi Guardado</td>
       <td>Ciencias</td>
       <td>0</td>
       <td>0</td>
@@ -338,7 +338,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Daniela Nahomy Guardado</td>
+      <td>Daniela Nahomi Guardado</td>
       <td>Sociales</td>
       <td>0</td>
       <td>0</td>
