--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Darwin Anderson Olivia</td>
+      <td>Darwin Anderson Oliva</td>
       <td>Matematica</td>
       <td>10</td>
       <td>10</td>
@@ -354,7 +354,7 @@
       <td>10</td>
     </tr>
     <tr>
-      <td>Darwin Anderson Olivia</td>
+      <td>Darwin Anderson Oliva</td>
       <td>Ingles</td>
       <td>7</td>
       <td>10</td>
@@ -362,7 +362,7 @@
       <td>9</td>
     </tr>
     <tr>
-      <td>Darwin Anderson Olivia</td>
+      <td>Darwin Anderson Oliva</td>
       <td>lenguaje</td>
       <td>0</td>
       <td>0</td>
@@ -370,7 +370,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Darwin Anderson Olivia</td>
+      <td>Darwin Anderson Oliva</td>
       <td>Ciencias</td>
       <td>0</td>
       <td>0</td>
@@ -378,7 +378,7 @@
       <td>0</td>
     </tr>
     <tr>
-      <td>Darwin Anderson Olivia</td>
+      <td>Darwin Anderson Oliva</td>
       <td>Sociales</td>
       <td>0</td>
       <td>0</td>
