--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
     <tr>
       <td>Anderson Enrique Vega</td>
       <td>Ingles</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
+      <td>10</td>
+      <td>10</td>
+      <td>10</td>
+      <td>10</td>
     </tr>
     <tr>
       <td>Anderson Enrique Vega</td>
@@ -476,10 +476,10 @@
     <tr>
       <td>Jefferson Stanley Mejia</td>
       <td>Ingles</td>
+      <td>7</td>
       <td>10</td>
       <td>10</td>
-      <td>10</td>
-      <td>10</td>
+      <td>9</td>
     </tr>
     <tr>
       <td>Jefferson Stanley Mejia</td>
@@ -944,6 +944,22 @@
       <td>0</td>
       <td>0</td>
       <td>0</td>
+    </tr>
+    <tr>
+      <td>Diego Alejandro Fernandez</td>
+      <td>Ingles</td>
+      <td>10</td>
+      <td>10</td>
+      <td>10</td>
+      <td>10</td>
+    </tr>
+    <tr>
+      <td>Hugo Remberto Salazar Santiago</td>
+      <td>Ingles</td>
+      <td>10</td>
+      <td>10</td>
+      <td>10</td>
+      <td>10</td>
     </tr>
     <tr>
       <td>Darwin Azael Fernandez</td>
@@ -956,10 +972,10 @@
     <tr>
       <td>Darwin Azael Fernandez</td>
       <td>Ingles</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
+      <td>10</td>
+      <td>10</td>
+      <td>10</td>
+      <td>10</td>
     </tr>
     <tr>
       <td>Darwin Azael Fernandez</td>
@@ -1388,6 +1404,10 @@
 	</tbody>
 </table>
 </center>
+<div class="footer">
+  <p>Sitio Web Traido a ustedes por el profesor de Mate y de Ingles. Have a good day! ;) </p>
+
+</div>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script><script  src="./script.js"></script>
