--- a/recursos.html
+++ b/recursos.html
@@ -141,7 +141,16 @@
   <script src="./script.js"></script>
   <script src="popper.min.js"></script>
   <script src="bootstrap.min.js"></script>
-
+<script>
++function ($) {
+    'use strict';
+    $(document).on('click', 'navbar-collapse.in', function (e) {
+        if ($(e.target).is('a')) {
+            $(this).collapse('toggle');
+        }
+    });
+}(jQuery);
+</script>
 
 </body>
 
