--- a/index.html
+++ b/index.html
@@ -1443,6 +1443,8 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
   <script src="./script.js"></script>
+  <script src="popper.min.js"></script>
+  <script src="bootstrap.min.js"></script>
   <script>
   $(document).ready(function () {
     $(".navbar-nav li a").click(function(event) {
