finalizado primoer de septimo

--- a/recursos.html
+++ b/recursos.html
@@ -81,7 +81,9 @@
         </div>
         <div class="modal-body">
           <center>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/YVLCnwYnu9w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br></br>
+          <iframe width="460" height="215" src="https://www.youtube.com/embed/YVLCnwYnu9w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br></br>
+
+          <a type="button" style="color:white;" href="https://youtu.be/YVLCnwYnu9w" class="btn btn-primary">Abrir video en youtube</a>
           <a type="button" style="color:white;" href="recursos/marzo7.pdf" class="btn btn-primary">Descargar Guia de estudio</a>
           <p> Al completar la guia y enviarla a mi contacto en whatsapp usted tendra la nota de marzo ganada</p>
         </center>
@@ -101,7 +103,8 @@
         </div>
         <div class="modal-body">
           <center>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/_CFuRpjRxdg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe width="460" height="215" src="https://www.youtube.com/embed/_CFuRpjRxdg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <a type="button" style="color:white;" href="https://youtu.be/_CFuRpjRxdg" class="btn btn-primary">Abrir video en youtube</a>
           <a type="button" style="color:white;" href="recursos/abril7.pdf" class="btn btn-primary">Descargar Guia de estudio</a>
           <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLSetujibu3kFvOYizoozS4OsN-AvoNaNWq_1lNwVsCAD9luNmg/viewform?usp=sf_link" class="btn btn-primary">Realizar examen</a>
         </center>
@@ -120,12 +123,24 @@
           </button>
         </div>
         <div class="modal-body">
-          <center>
-            <h1>AUN NO...EN ESTOS DIAS CON MEJOR CONTENIDO PARA APRENDER</H1>
-          <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/_CFuRpjRxdg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <a type="button" style="color:white;" href="recursos/abril7.pdf" class="btn btn-primary">Descargar Guia de estudio</a>
-          <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLSetujibu3kFvOYizoozS4OsN-AvoNaNWq_1lNwVsCAD9luNmg/viewform?usp=sf_link" class="btn btn-primary">Realizar examen</a> -->
-        </center>
+          <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <iframe width="260" height="150" src="https://www.youtube.com/embed/wxqJ5aTPcVM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <a type="button" style="color:white;" href="https://youtu.be/Z-snI0yySN0" class="btn btn-primary">Abrir video en youtube</a>
+        <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLScbCvU5X5w3jxjv0f3ILARDWmMHYkzmzPRoq37DLiLEl_AFkg/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 1</a>
+      </div>
+      <div class="col-sm">
+        <a type="button" style="color:white;" href="recursos/mayo7.pdf" class="btn btn-primary">Descargar Guia de estudio</a>
+
+      </div>
+    </div>
+  </div>
+
+
+
+
+
         </div>
       </div>
     </div>
