--- a/abril.html
+++ b/abril.html
@@ -26,9 +26,9 @@
       <li class="nav-item">
         <a class="nav-link" href="abril.html">Notas de Abril</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="mayo.html">Notas de Mayo</a>
-      </li>
+      </li> -->
       <li class="nav-item">
         <a style="color:red" class="nav-link" href="recursos.html">GUIAS, TAREAS, RECURSOS</a>
       </li>
@@ -1444,7 +1444,7 @@
   <script src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js'></script>
   <script src="./script.js"></script>
   <script src="popper.min.js"></script>
-  <script src="bootstrap.min.js"></script>  
+  <script src="bootstrap.min.js"></script>
   <script>
   $(document).ready(function () {
     $(".navbar-nav li a").click(function(event) {
