--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
       <li class="nav-item">
         <a class="nav-link" href="abril.html">Notas de Abril</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="mayo.html">Notas de Mayo</a>
-      </li>
+      </li> -->
       <li class="nav-item">
         <a style="color:red" class="nav-link" href="recursos.html">GUIAS, TAREAS, RECURSOS</a>
       </li>
