--- a/recursos.html
+++ b/recursos.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Notas Marzo</title>
+  <title>Recursos</title>
   <link rel='stylesheet' href='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css'>
   <link rel="stylesheet" href="./style.css">
   <link rel='stylesheet' href='bootstrap.min.css'>
