--- a/recursos.html
+++ b/recursos.html
@@ -126,16 +126,28 @@
           <div class="container">
     <div class="row">
       <div class="col-sm">
-        <iframe width="260" height="150" src="https://www.youtube.com/embed/wxqJ5aTPcVM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <a type="button" style="color:white;" href="https://youtu.be/Z-snI0yySN0" class="btn btn-primary">Abrir video en youtube</a>
-        <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLScbCvU5X5w3jxjv0f3ILARDWmMHYkzmzPRoq37DLiLEl_AFkg/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 1</a>
+        <div style="border-style: solid;">
+        <p class="padding1">Semana 1</p>
+        <iframe class="padding1" width="260" height="150" src="https://www.youtube.com/embed/wxqJ5aTPcVM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="padding: 5px;"></iframe>
+        <a  type="button" style="color:white;" href="https://youtu.be/Z-snI0yySN0" class="btn btn-primary">Abrir video en youtube</a>
+        <a  type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLScbCvU5X5w3jxjv0f3ILARDWmMHYkzmzPRoq37DLiLEl_AFkg/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 1</a>
+      </div>
       </div>
       <div class="col-sm">
-        <a type="button" style="color:white;" href="recursos/mayo7.pdf" class="btn btn-primary">Descargar Guia de estudio</a>
-
+        <div style="border-style: solid;">
+        <p class="padding1">Semana 2</p>
+        <iframe class="padding1" width="260" height="150" src="https://www.youtube.com/embed/9kD_TSajE2c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <a  type="button" style="color:white;" href="https://youtu.be/9kD_TSajE2c" class="btn btn-primary">Abrir video en youtube</a>
+        <a  type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLSe1qSESvz6Z0tHgWhR2kVY0ATtGK-SpdHYsI2k3_pk5kE_WaQ/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 2</a>
       </div>
+      </div>
+
     </div>
   </div>
+  <br>
+  <center>
+  <a  type="button" style="color:white;" href="recursos/mayo7.pdf" class="btn btn-primary">Descargar Guia de estudio</a>
+</center>
 
 
 
