--- a/recursoshiden.html
+++ b/recursoshiden.html
@@ -63,7 +63,7 @@
         </button>
       </div>
       <div class="col-sm">
-        <button type="button" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#exampleModalCenter9">
+        <button style="margin-top:10px;" type="button" class="btn btn-danger btn-lg" data-toggle="modal" data-target="#exampleModalCenter9">
           NOVENO
         </button>
       </div>
@@ -205,7 +205,7 @@
           </div>
           <br>
           <center>
-            <a type="button" style="color:white;" href="recursos/mayo8.pdf" class="btn btn-primary">Descargar Guia de estudio</a>
+            <a type="button" style="color:white;" href="recursos/mayo9.pdf" class="btn btn-primary">Descargar Guia de estudio</a>
           </center>
         </div>
       </div>
