--- a/recursoshiden.html
+++ b/recursoshiden.html
@@ -48,12 +48,12 @@
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <button type="button" class="btn btn-warning btn-lg" data-toggle="modal" data-target="#exampleModalCenter6" onclick="alert('aun no disponible')">
+        <button type="button" class="btn btn-warning btn-lg" data-toggle="modal" data-target="#exampleModalCenter5" onclick="alert('aun no disponible')">
           QUINTO
         </button>
       </div>
       <div class="col-sm">
-        <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#exampleModalCenter5" onclick="alert('aun no disponible')">
+        <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#exampleModalCenter0" onclick="alert('aun no disponible')">
           SEXTO
         </button>
       </div>
@@ -75,7 +75,7 @@
 
 
   <!-- Modal de marzo -->
-  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal fade" id="exampleModalCenter5" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -85,19 +85,44 @@
           </button>
         </div>
         <div class="modal-body">
-          <center>
-            <iframe width="460" height="215" src="https://www.youtube.com/embed/YVLCnwYnu9w" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br></br>
+          <div class="row">
+            <div class="col-sm">
+              <div style="border-style: solid;">
+                <p class="padding1">Semana 2</p>
+                <iframe width="260" height="150" src="https://www.youtube.com/embed/a40uWED64tw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a type="button" style="color:white;" href="https://youtu.be/a40uWED64tw" class="btn btn-primary">Abrir video en youtube</a>
+                <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLSd2xvORylTwCXUatGSaFvkCRuraEh3LusNkr0QVRsAMmSv5vQ/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 1</a>
+              </div>
+              <div style="border-style: solid;">
+                <p class="padding1">Semana 3</p>
+                <iframe class="padding1" width="260" height="150" src="https://www.youtube.com/embed/NulCcZMLTiY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a type="button" style="color:white;" href="https://youtu.be/NulCcZMLTiY" class="btn btn-primary">Abrir video en youtube</a>
+                <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLSck1JUTePj1vPFgd1H5MOIs9ukBI16DCny1kSnEXF-bO8rRPg/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 2</a>
+              </div>
+            </div>
+            <div class="col-sm">
+              <div style="border-style: solid;">
+                <p class="padding1">Semana 4</p>
+                <iframe class="padding1" width="260" height="150" src="https://www.youtube.com/embed/OkSKJKQLYH8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a type="button" style="color:white;" href="https://youtu.be/OkSKJKQLYH8" class="btn btn-primary">Abrir video en youtube</a>
+                <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLSevax4xmLJZb6MN8fMk1UQkF57j8pC2m6t43hGwugPXdmiXzA/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 3</a>
+              </div>
 
-            <a type="button" style="color:white;" href="https://youtu.be/YVLCnwYnu9w" class="btn btn-primary">Abrir video en youtube</a>
-            <a type="button" style="color:white;" href="recursos/marzo7.pdf" class="btn btn-primary">Descargar Guia de estudio</a>
-            <p> Al completar la guia y enviarla a mi contacto en whatsapp usted tendra la nota de marzo ganada</p>
-          </center>
+            </div>
+          </div>
         </div>
+
+        <br>
+        <center>
+          <a type="button" style="color:white;" href="recursos/mayo5.pdf" class="btn btn-primary">Descargar Guia de estudio</a>
+        </center>
       </div>
     </div>
   </div>
+  </div>
+  </div>
   <!-- Modal de abril -->
-  <div class="modal fade" id="exampleModalCenter2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal fade" id="exampleModalCenter6" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
@@ -107,15 +132,41 @@
           </button>
         </div>
         <div class="modal-body">
-          <center>
-            <iframe width="460" height="215" src="https://www.youtube.com/embed/_CFuRpjRxdg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <a type="button" style="color:white;" href="https://youtu.be/_CFuRpjRxdg" class="btn btn-primary">Abrir video en youtube</a>
-            <a type="button" style="color:white;" href="recursos/abril7.pdf" class="btn btn-primary">Descargar Guia de estudio</a>
-            <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLSetujibu3kFvOYizoozS4OsN-AvoNaNWq_1lNwVsCAD9luNmg/viewform?usp=sf_link" class="btn btn-primary">Realizar examen</a>
-          </center>
+          <div class="row">
+            <div class="col-sm">
+              <div style="border-style: solid;">
+                <p class="padding1">Semana 2</p>
+                <iframe width="260" height="150" src="https://www.youtube.com/embed/fS6kmLvB9vg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a type="button" style="color:white;" href="https://youtu.be/fS6kmLvB9vg" class="btn btn-primary">Abrir video en youtube</a>
+                <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLSd5EpgKKgr7tFOQmKClLHeCQ88dpKK6KsOLqqxYH3zWtP0hHQ/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 1</a>
+              </div>
+              <div style="border-style: solid;">
+                <p class="padding1">Semana 3</p>
+                <iframe class="padding1" width="260" height="150" src="https://www.youtube.com/embed/oTHa_SiKuEo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a type="button" style="color:white;" href="https://youtu.be/oTHa_SiKuEo" class="btn btn-primary">Abrir video en youtube</a>
+                <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLScuOeWYG_wV1slCWnBnp_aMKze_OA7bzTxhZuEqcClvPDtkzA/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 2</a>
+              </div>
+            </div>
+            <div class="col-sm">
+              <div style="border-style: solid;">
+                <p class="padding1">Semana 4</p>
+                <iframe class="padding1" width="260" height="150" src="https://www.youtube.com/embed/FSaZG_syn9Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a type="button" style="color:white;" href="https://youtu.be/FSaZG_syn9Q" class="btn btn-primary">Abrir video en youtube</a>
+                <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLSeYMxuIWrjRaoKs5vH8GZPrlEOI43Qe7SXTmh4QmqqvCZaBMA/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 3</a>
+              </div>
+
+            </div>
+          </div>
         </div>
+
+        <br>
+        <center>
+          <a type="button" style="color:white;" href="recursos/mayo8.pdf" class="btn btn-primary">Descargar Guia de estudio</a>
+        </center>
       </div>
     </div>
+  </div>
+  </div>
   </div>
   <!-- Modal de octavo-->
   <div class="modal fade" id="exampleModalCenter3" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -153,9 +204,9 @@
                 </div>
 
               </div>
-
             </div>
           </div>
+
           <br>
           <center>
             <a type="button" style="color:white;" href="recursos/mayo8.pdf" class="btn btn-primary">Descargar Guia de estudio</a>
