--- a/recursoshiden.html
+++ b/recursoshiden.html
@@ -48,7 +48,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <button type="button" class="btn btn-warning btn-lg" data-toggle="modal" data-target="#exampleModalCenter5" onclick="alert('aun no disponible')">
+        <button type="button" class="btn btn-warning btn-lg" data-toggle="modal" data-target="#exampleModalCenter5">
           QUINTO
         </button>
       </div>
