sexto y ahorita descanso

--- a/recursoshiden.html
+++ b/recursoshiden.html
@@ -53,7 +53,7 @@
         </button>
       </div>
       <div class="col-sm">
-        <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#exampleModalCenter0" onclick="alert('aun no disponible')">
+        <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#exampleModalCenter6">
           SEXTO
         </button>
       </div>
@@ -79,7 +79,7 @@
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Marzo</h5>
+          <h5 class="modal-title" id="exampleModalLongTitle">Quinto</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -126,7 +126,7 @@
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Abril</h5>
+          <h5 class="modal-title" id="exampleModalLongTitle">MAYO SEXTO</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -136,23 +136,23 @@
             <div class="col-sm">
               <div style="border-style: solid;">
                 <p class="padding1">Semana 2</p>
-                <iframe width="260" height="150" src="https://www.youtube.com/embed/fS6kmLvB9vg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <a type="button" style="color:white;" href="https://youtu.be/fS6kmLvB9vg" class="btn btn-primary">Abrir video en youtube</a>
-                <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLSd5EpgKKgr7tFOQmKClLHeCQ88dpKK6KsOLqqxYH3zWtP0hHQ/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 1</a>
+                <iframe width="260" height="150" src="https://www.youtube.com/embed/KOj7Jv37_Yc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a type="button" style="color:white;" href="https://youtu.be/KOj7Jv37_Yc" class="btn btn-primary">Abrir video en youtube</a>
+                <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLSf6VDjoN55HnavdOMlgPS_62FnqSjENV1n3al40OhUGEyan4g/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 1</a>
               </div>
               <div style="border-style: solid;">
                 <p class="padding1">Semana 3</p>
-                <iframe class="padding1" width="260" height="150" src="https://www.youtube.com/embed/oTHa_SiKuEo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                <a type="button" style="color:white;" href="https://youtu.be/oTHa_SiKuEo" class="btn btn-primary">Abrir video en youtube</a>
-                <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLScuOeWYG_wV1slCWnBnp_aMKze_OA7bzTxhZuEqcClvPDtkzA/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 2</a>
+                <iframe class="padding1" width="260" height="150" src="https://www.youtube.com/embed/1BWG-k7uNbk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <a type="button" style="color:white;" href="https://youtu.be/1BWG-k7uNbk" class="btn btn-primary">Abrir video en youtube</a>
+                <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLSczXKUKZ9dVrd3jmYECnjfYz98QHKen3oZZ92oLfXH_IoCuFQ/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 2</a>
               </div>
             </div>
             <div class="col-sm">
               <div style="border-style: solid;">
                 <p class="padding1">Semana 4</p>
-                <iframe class="padding1" width="260" height="150" src="https://www.youtube.com/embed/FSaZG_syn9Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="padding1" width="260" height="150" src="https://www.youtube.com/embed/chScdNEPbr0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <a type="button" style="color:white;" href="https://youtu.be/FSaZG_syn9Q" class="btn btn-primary">Abrir video en youtube</a>
-                <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLSeYMxuIWrjRaoKs5vH8GZPrlEOI43Qe7SXTmh4QmqqvCZaBMA/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 3</a>
+                <a type="button" style="color:white;" href="https://docs.google.com/forms/d/e/1FAIpQLScLtRHdNnjyoOSets7Fc751IFz3l1o3dlKkRQ_n5E2FObAyuw/viewform?usp=sf_link" class="btn btn-primary">Cuestionario 3</a>
               </div>
 
             </div>
@@ -161,7 +161,7 @@
 
         <br>
         <center>
-          <a type="button" style="color:white;" href="recursos/mayo8.pdf" class="btn btn-primary">Descargar Guia de estudio</a>
+          <a type="button" style="color:white;" href="recursos/mayo6.pdf" class="btn btn-primary">Descargar Guia de estudio</a>
         </center>
       </div>
     </div>
